# Generative-AI

./: README.md  code.ipynb  main.py  pyproject.toml
docs/phase1/: 01_plan.md  02_TechnicalDetails.md  03_DecisionPoints.md  state.py  tools.py
