[project]
name = "resumescreening"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.13",
    "langchain-core>=1.2.20",
    "langchain-google-vertexai>=3.2.2",
    "langgraph>=1.1.3",
    "python-dotenv>=1.2.2",
]
